# server/laba_6/views.py
@@ -21,7 +21,7 @@ class GroupViewSet(viewsets.ModelViewSet):
 
 
 class CustomerViewSet(viewsets.ModelViewSet):
-    queryset = Customer.objects.all()
+    queryset = Customer.objects.all().order_by('id')
     serializer_class = CustomerSerializer
     permission_classes = [permissions.IsAuthenticated]
 
